--- a/courses/templates/courses/main.html
+++ b/courses/templates/courses/main.html
@@ -1,1 +1,13 @@
-Courses Main
+<!-- Courses Main -->
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'courses/style.css' %}" />
+<h1> Courses </h1>
+{% if latest_courses_list %}
+	<ul>
+	{% for course in latest_courses_list %}
+	 <li><a href="{% url 'courses:detail' course.id %}">{{ course.course_name }}</a></li>
+	{% endfor %}
+	</ul>
+{% else %}
+	<p>No courses available.</p>
+{% endif %}
