--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,12 +1,10 @@
 {% extends 'registration/base.html' %}
 
-{% block title %}Sign Up{% endblock %}
-
-{% block content %}
-  <h2>Sign up</h2>
+{% block title %}Sign up{% endblock %}
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Sign up</button>
   </form>
 {% endblock %}
+
