--- a/templates/registration/base.html
+++ b/templates/registration/base.html
@@ -1,34 +1,77 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
+<!doctype html>
+<html>
+<head>
+    <link rel="shortcut icon" type="image/png" href="/static/Learn.com.png"/>
     <meta charset="utf-8">
-    <title>{% block title %}Learn.com | Free online courses{% endblock %}</title>
-  </head>
-  <body>
-  <div class="page">
+    <title>{% block title %}{% endblock %}</title>
+    <style>
+    html,body {
+        height:100%;
+    }
+    body {
+        margin:0;
+        font-size:120%;
+    }
+    body > .page {
+        height: auto;
+        min-height: 100%;
+    }
+    .page {
+        width:100%;
+        position:relative;
+    }
+    .content {
+        max-width:1000px;
+        margin:0 auto;
+        padding-top: 20px;
+        min-height: 500px;
+        width: auto; margin-left: auto; margin-right: auto;
+    }
+    header {
+        width:100%;
+        height:140px;
+        padding:40px;
+        -moz-box-sizing: border-box; 
+        -webkit-box-sizing: border-box; 
+        box-sizing: border-box; 
+        background:url(/static/Learn.com.png); background-size: 101%; background-repeat: no-repeat;
+    }
+    footer {
+        width:100%;
+        height:100px;
+        position:absolute;
+        bottom:0;
+        margin-bottom:-150px;
+    }
+
+    </style>
+</head>
+<body>
+<div class="page">
     <header>
-      <a href="{% url 'home' %}">Home</a>
-      <a href="{% url 'courses:courses' %}">Courses</a>
+        <a style="margin: 40px;" href="{% url 'home' %}">Home</a>
+        <a href="{% url 'courses:courses' %}">Courses</a>
 
-      {% if user.is_authenticated %}
-       <a>Logged in as: {{request.user}}</a><br>
-       <a href="{% url 'logout' %}">Logout</a>
+        {% if user.is_authenticated %}
+            <a style="float:right">Logged in as: {{request.user}}</a><br>
+            <a style="float:right" href="{% url 'logout' %}">Logout</a></p>
+        {% else %}
+            <a style="float:right" href="{% url 'signup' %}">Sign Up</a>
+            <br>
+            <a style="float:right" href="{% url 'login' %}">Login</a>
+        {% endif %}
 
-      {% else %}
-      <a href="{% url 'signup' %}">Sign up</a><br>
-      <a href="{% url 'login' %}">Login</a>
-      {% endif %}
-
-      <h1>Learn.com</h1>
-
+        <h1 style="text-align: center;">Learn.com</h1>
+        
     </header>
-    <main>
-      {% block content %}
-      {% endblock %}
+    <main class="content">
+        {% block content %}{% endblock %}
     </main>
     <footer>
-      <p style="text-align:center;">2017 Mali Zeleni</p>
+        <p style="text-align:center;">
+        © 2017 Mali Zeleni Team. All rights reserved.
+        </p>
     </footer>
-  </body>
+</div>
+</body>
 </html>
-
