--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,13 +1,14 @@
 {% extends 'registration/base.html' %}
 
-{% block title %}Login{% endblock %}
+{% block title %}Login - Learn.com{% endblock %}
 
 {% block content %}
+  <a href="{% url 'home' %}">Home</a>
   <h2>Login</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Login</button>
+    Not a user yet? <a href="{% url 'signup' %}">Create account</a>
   </form>
 {% endblock %}
-
