--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,10 +1,14 @@
 {% extends 'registration/base.html' %}
 
-{% block title %}Sign up{% endblock %}
+{% block title %}Sign Up - Learn.com{% endblock %}
+
+{% block content %}
+  <a href="{% url 'home' %}">Home</a>
+  <h2>Sign up</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Sign up</button>
+    Already have an account? <a href="{% url 'login' %}">Log in</a>
   </form>
 {% endblock %}
-
