--- a/courses/templates/courses/course.html
+++ b/courses/templates/courses/course.html
@@ -1,22 +1,8 @@
 {% extends 'registration/base.html' %}
 
-{% block title %}Lessons - Learn.com{% endblock %}
+{% block title %}Course - Learn.com{% endblock %}
 
 {% block content %}
-    <a style="float:left;" href="{% url 'courses:courses' %}">Back to courses</a>
-    <h1>Lessons</h1>
-    <a style="float:right;" href="{{request.path}}lesson/create">Add a lesson</a>
-    {% if latest_lessons_list %}
-        <ul>
-        {% for lesson in latest_lessons_list %}
-         <li>
-         <a href="{% url 'courses:lesson' lesson.id %}">{{ lesson.lesson_name }}</a>
-         <a href="{% url 'courses:update_lesson' lesson.id %}">edit</a>
-         <a href="{% url 'courses:delete_lesson' lesson.id %}">delete</a>
-         </li>
-        {% endfor %}
-        </ul>
-    {% else %}
-        <p>No lessons available.</p>
-    {% endif %}
+    <h1>{{course.course_name}}</h1>
+    <a href="{% url 'courses:lessons' course.id %}">Lekcije</a>
 {% endblock %}
