--- a/templates/registration/base.html
+++ b/templates/registration/base.html
@@ -27,6 +27,9 @@
         min-height: 500px;
         width: auto; margin-left: auto; margin-right: auto;
     }
+    .breadcrumbs li {
+        display: inline;
+    }
     header {
         width:100%;
         height:140px;
@@ -65,6 +68,10 @@
         
     </header>
     <main class="content">
+    <div class="breadcrumbs">
+    {% load sitetree %}
+    {% sitetree_breadcrumbs from "maintree" %}
+    </div>
         {% block content %}{% endblock %}
     </main>
     <footer>
