--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -3,14 +3,70 @@
 {% block title %}Learn.com{% endblock %}
 
 {% block content %}
-    <style>
-    button{
-        height: 200px;
-        width: 99%;
-        margin: 10px;
-    }
-    </style>
-    <a href="{% url 'signup' %}"><button id="button">Sign Up</button></a>
-    <a href="{% url 'login' %}"><button id="button">Log In</button></a>
-    <a href="{% url 'courses:courses' %}"><button id="button">Go to Courses</button></a>
+<div id="header" class="header">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-4">
+				<h1>Elearning web page</h1>
+				<p><h3> eLearning is learning utilizing electronic technologies, to access educational curriculum outside of a 					traditional classroom. 
+				In most cases, it refers to a course, program or degree delivered completely online.</h3></p>
+				{% if user.is_authenticated %}
+				<a href="{% url 'courses:courses' %}">
+				<button class="btn btn-lg btn-success"><span class="glyphicon glyphicon-book"></span> Go to courses!</button>
+				</a>
+				{% else %}
+				<a href="{% url 'login' %}">
+				<button class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-user"  color:white"></span> Log in</button>
+				</a>
+				<a href="{% url 'signup' %}">
+				<button class="btn btn-lg btn-success"><span class="glyphicon glyphicon-circle-arrow-right"></span> Sign up</button>
+				</a>
+				{% endif %}
+			</div>
+			<div class="col-lg-4">
+			</div>
+			<div class="col-lg-4">
+			</div>
+		</div>
+	</div>
+</div>
+	
+<div id="mycarousel" class="carousel slide" data-ride="carousel" data-interval="3000">
+	<ol class="carousel-indicators" >
+		<li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+		<li data-target="#mycarousel" data-slide-to="1"></li>
+		<li data-target="#mycarousel" data-slide-to="2"></li>
+	</ol>
+
+	<div class="carousel-inner">
+		<div class="item active">
+			<img class="img-responsive center-block" src="/static/img/r1.jpg">
+			<div class="carousel-caption">
+				<h1>Learn.com</h1>
+			</div>
+		</div>
+		<div class="item">
+			<img class="img-responsive center-block" src="/static/img/r2.jpg">
+			<div class="carousel-caption">
+				<h1>Learn.com</h1>
+			</div>
+		</div>
+		<div class="item">
+			<img class="img-responsive center-block"src="/static/img/r3.jpg">
+			<div class="carousel-caption">
+				<h1>Learn.com</h1>
+			</div>
+		</div>
+	</div>
+
+	<a class="left carousel-control" href="#mycarousel" role="button" data-slide="prev">
+		<span class="glyphicon glyphicon-chevron-left"></span>
+	</a>
+
+	<a class="right carousel-control" href="#mycarousel" role="button" data-slide="next">
+		<span class="glyphicon glyphicon-chevron-right"></span>
+	</a>
+
+
+</div>
 {% endblock %}
