--- a/templates/registration/base.html
+++ b/templates/registration/base.html
@@ -1,84 +1,77 @@
 <!doctype html>
 <html>
 <head>
-    <link rel="shortcut icon" type="image/png" href="/static/Learn.com.png"/>
-    <meta charset="utf-8">
-    <title>{% block title %}{% endblock %}</title>
-    <style>
-    html,body {
-        height:100%;
-    }
-    body {
-        margin:0;
-        font-size:120%;
-    }
-    body > .page {
-        height: auto;
-        min-height: 100%;
-    }
-    .page {
-        width:100%;
-        position:relative;
-    }
-    .content {
-        max-width:1000px;
-        margin:0 auto;
-        padding-top: 20px;
-        min-height: 500px;
-        width: auto; margin-left: auto; margin-right: auto;
-    }
-    .breadcrumbs li {
-        display: inline;
-    }
-    header {
-        width:100%;
-        height:140px;
-        padding:40px;
-        -moz-box-sizing: border-box; 
-        -webkit-box-sizing: border-box; 
-        box-sizing: border-box; 
-        background:url(/static/Learn.com.png); background-size: 101%; background-repeat: no-repeat;
-    }
-    footer {
-        width:100%;
-        height:100px;
-        position:absolute;
-        bottom:0;
-        margin-bottom:-150px;
-    }
-
-    </style>
+  <meta charset="utf-8">
+  <title>{% block title %}{% endblock %}</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="/static/css/bootstrap.min.css" rel="stylesheet">
+	<link href="/static/css/custom.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Inknut+Antiqua" rel="stylesheet">
 </head>
+
 <body>
 <div class="page">
-    <header>
-        <a style="margin: 40px;" href="{% url 'home' %}">Home</a>
-        <a href="{% url 'courses:courses' %}">Courses</a>
+  <header>
+		<nav class="navbar navbar-inverse navbar-fixed-top">
+			<div class="container">
+				<button type="button" class="navbar-toggle"
+					data-toggle="collapse"
+					data-target=".navbar-collapse">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="{%url 'home' %}">Learn</a>
+				<div class="navbar-collapse collapse">
+					<ul class="nav navbar-nav navbar-right">
+						<li class="active"><a href="{%url 'home' %}">Home</a></li>
+						<li><a href="{%url 'courses:courses' %}">Courses</a></li>	
+					</ul>	
+				</div>
+			</div>
+		</nav>
+  </header>
 
-        {% if user.is_authenticated %}
-            <a style="float:right">Logged in as: {{request.user}}</a><br>
-            <a style="float:right" href="{% url 'logout' %}">Logout</a></p>
-        {% else %}
-            <a style="float:right" href="{% url 'signup' %}">Sign Up</a>
-            <br>
-            <a style="float:right" href="{% url 'login' %}">Login</a>
-        {% endif %}
+  <main class="content">
+  <div class="breadcrumbs">
+  {% load sitetree %}
+  {% sitetree_breadcrumbs from "maintree" %}
+  </div>
+      {% block content %}{% endblock %}
+  </main>
 
-        <h1 style="text-align: center;">Learn.com</h1>
-        
-    </header>
-    <main class="content">
-    <div class="breadcrumbs">
-    {% load sitetree %}
-    {% sitetree_breadcrumbs from "maintree" %}
-    </div>
-        {% block content %}{% endblock %}
-    </main>
-    <footer>
-        <p style="text-align:center;">
-        © 2017 Mali Zeleni Team. All rights reserved.
-        </p>
-    </footer>
+  <footer>
+	<div id="footer" class="footer navbar-fixed-bottom">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-4 col-md-4">
+					<h4>Contact Us</h4>
+					<p><i class="fa fa-home" aria-hidden="true"></i> 46 Sarajevska Ulica, Split, 21000</p>
+					<p><i class="fa fa-envelope" aria-hidden="true"></i> info@extensionengine.com</p>
+					<p><i class="fa fa-globe" aria-hidden="true"></i> www.extensionengine.com</p>
+				</div>
+				<div class="col-lg-4 col-md-4 ">
+					<p><i class="fa" aria-hidden="true"></i> <img class="img-responsive center-block" src="/static/img/logo2.png"></p>
+				</div>
+				<div class="col-lg-4 col-md-4 padding">
+					<h4>Stay in touch</h4>
+					<i class="social fa fa-facebook" aria-hidden="false"></i>
+					<i class="social fa fa-twitter" aria-hidden="true"></i>
+					<i class="social fa fa-instagram"  aria-hidden="true" ></i>
+					<i class="social fa fa-youtube" aria-hidden="true"></i>
+					<i class="social fa fa-pinterest" aria-hidden="true"></i>
+					<i class="social fa fa-github" aria-hidden="true"></i>
+				</div>
+			</div>
+		</div>
+	</div>
+  </footer>
 </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
 </body>
 </html>
