--- a/courses/templates/courses/course_confirm_delete.html
+++ b/courses/templates/courses/course_confirm_delete.html
@@ -1,12 +1,20 @@
-{% extends 'registration/base.html' %}
+{% extends 'courses/main.html' %}
 
 {% block title %}Delete course - Learn.com{% endblock %}
 
 {% block content %}
+{% include 'course_css.html' %}
+<div class="cont_course">
 <h1>Delete course</h1>
+<br>
 <form action="" method="post">{% csrf_token %}
     <p>Are you sure you want to delete "{{ object }}"?</p>
-    <input type="button" value="Cancel" onclick="history.back(-1)" />
-    <input type="submit" value="Confirm" />
+   
+     <a>
+		<button class="btn btn-lg btn-success" type="submit"><span class="glyphicon glyphicon-ok"></span> Confirm</button>
+	</a>
+    <a>
+		<button class="btn btn-default btn-lg" type="button" onclick="history.back(-1)"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
+	</a>
 </form>
 {% endblock %}
