--- a/courses/templates/courses/lesson_form.html
+++ b/courses/templates/courses/lesson_form.html
@@ -1,12 +1,20 @@
-{% extends 'registration/base.html' %}
+{% extends 'courses/main.html' %}
 
 {% block title %}Create a lesson - Learn.com{% endblock %}
 
 {% block content %}
+{% include 'course_css.html' %}
+<div class="cont_course">
 <h1>Create a lesson</h1>
+<br>
 <form action="" method="post">{% csrf_token %}
     {{ form.as_p }}
-    <input type="button" value="Cancel" onclick="history.back(-1)" />
-    <input type="submit" value="Save" />
+    <a>
+		<button class="btn btn-lg btn-success" type="submit"><span class="glyphicon glyphicon-ok"></span> Save</button>
+	</a>
+    <a>
+		<button class="btn btn-default btn-lg" type="button" onclick="history.back(-1)"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
+	</a>
 </form>
+</div>
 {% endblock %}
