--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -84,22 +84,24 @@ h3, h4{
 }
 
 *{
-   font-size: 30px;
+   font-size: 20px;
    line-height: 2;
 }
+
 .content{
 	margin-top: 50px;
-	margin-bottom: 120px;
+	margin-bottom: 100px;
 }
+
 .padding {
 	padding-left: 80px;
 }
+
 .footer{
 	padding: 2px;
 	color: #cccccc;
 	background-color: #222222;
 }
-
 
 .footer .social{
 	font-size: 20px;
@@ -110,4 +112,18 @@ h3, h4{
 	border: 1px solid #cccccc;
 	margin-bottom: 10px;
 	margin-right: 5px;
+}
+
+.dropdown {
+	display:inline;
+}
+
+.glyphicon.glyphicon-off {
+	background-color: grey;
+	font-size: 75%;
+}
+
+
+.login {
+	margin-left: 16%;
 }
