perm/url checks, breadcrumbs show names, about_course column, about_course page
* added permission and url checks, updated breadcrumbs to show course and course names, added about section to courses, added page about_course

* added 403, 404, 500 pages

* 403/404/500 pages updated

* added submission model

* secret key hidden

* user model reference updated

* optimized queries

--- a/courses/templates/courses/course.html
+++ b/courses/templates/courses/course.html
@@ -5,8 +5,13 @@
 {% block content %}
 {% include 'course_css.html' %}
 <div class="cont_course">
+    {% if user == course.course_owner %}
+    <a href="{% url 'courses:update_course' course.id %}">edit</a>      <!--########################################-->
+    <a href="{% url 'courses:delete_course' course.id %}">delete</a>    <!--########################################-->
+    {% endif %}
     <h1>{{course.course_name}}</h1>
+    <img src="{{course.course_picture}}">     <!--########################################-->
+    <p>{{course.course_about}}</p>          <!--########################################-->
     <a href="{% url 'courses:lessons' course.id %}">Lekcije</a>
 </div>
 {% endblock %}
-
