--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -97,6 +97,33 @@ h3, h4{
 	padding-left: 80px;
 }
 
+#footer {
+	position: relative;
+	margin-top: 150px;
+	height: 150px;
+	clear: both;
+}
+
+.clearfix:after {
+	content: ".";
+	display: block;
+	height: 0;
+	clear: both;
+	visibility: hidden;
+}
+
+.clearfix {
+	display: inline-block;
+}
+
+* html .clearfix {
+	height: 1%;
+}
+
+.clearfix {
+	display: block;
+}
+
 .footer{
 	padding: 2px;
 	color: #cccccc;
