--- a/courses/templates/courses/main.html
+++ b/courses/templates/courses/main.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     {% include 'course_css.html' %}
-    <div class="cont_course">
+    <div class="cont_course clearfix">
     <a class="btn btn-success btn-lg pull-right" href="{% url 'courses:create_course' %}">Start a course</a>
     <h1> Courses </h1>
     <br>
