--- a/templates/registration/base.html
+++ b/templates/registration/base.html
@@ -13,7 +13,7 @@
 	
 </head>
 
-<body>
+<body style="padding-bottom: 45px;">
 <div class="page">
   <header>
 		<nav class="navbar navbar-inverse navbar-fixed-top">
