--- a/courses/templates/courses/course.html
+++ b/courses/templates/courses/course.html
@@ -5,13 +5,16 @@
 {% block content %}
 {% include 'course_css.html' %}
 <div class="cont_course">
-    {% if user == course.course_owner %}
-    <a href="{% url 'courses:update_course' course.id %}">edit</a>      <!--########################################-->
-    <a href="{% url 'courses:delete_course' course.id %}">delete</a>    <!--########################################-->
+    <h1 class="word-size">{{course.course_name}}</h1>
+    <br>
+    <img class="course_pic" src="{{course.course_picture}}">
+    <br>    <!--########################################-->
+    <p class="text-align">{{course.course_about}}</p><br>         <!--########################################-->
+    <a href="{% url 'courses:lessons' course.id %}"><button class="btn btn-default btn-lg"><span class="glyphicon glyphicon-book"></span> Go to lessons</button></a>
+
+    {% if user == course.course_owner %}      <!--########################################-->
+    <a href="{% url 'courses:delete_course' course.id %}"><button class="btn btn-default pull-right"><span class="glyphicon glyphicon-trash"></span> Delete</button></a> 
+    <a href="{% url 'courses:update_course' course.id %}"><button class="btn btn-success pull-right"><span class="glyphicon glyphicon-pencil"></span> Edit</button></a>   <!--########################################-->
     {% endif %}
-    <h1>{{course.course_name}}</h1>
-    <img src="{{course.course_picture}}">     <!--########################################-->
-    <p>{{course.course_about}}</p>          <!--########################################-->
-    <a href="{% url 'courses:lessons' course.id %}">Lekcije</a>
 </div>
 {% endblock %}
