--- a/courses/templates/courses/lessons.html
+++ b/courses/templates/courses/lessons.html
@@ -9,14 +9,15 @@
     <a class="btn btn-success btn-lg pull-right" href="{% url 'courses:create_lesson' course_id%}">Add a lesson</a>
     {% endif %} <!--######################-->
     <h1>Lessons</h1>
+    <br>
     {% if latest_lessons_list %}
         <ul>
         {% for lesson in latest_lessons_list %}
          <li>
          <a href="{% url 'courses:lesson' course_id lesson.id %}">{{ lesson.lesson_name }}</a>
          {% if user.id == course_owner %} <!--######################-->
-         <a href="{% url 'courses:update_lesson' course_id lesson.id %}">edit</a>
-         <a href="{% url 'courses:delete_lesson' course_id lesson.id %}">delete</a>
+         <a href="{% url 'courses:update_lesson' course_id lesson.id %}"><button type="button" class="btn btn-default btn-xs">Edit</button></a>
+         <a href="{% url 'courses:delete_lesson' course_id lesson.id %}"><button type="button" class="btn btn-default btn-xs">Delete</button></span></a>
          {% endif %} <!--######################-->
          </li>
         {% endfor %}
