--- a/courses/templates/courses/main.html
+++ b/courses/templates/courses/main.html
@@ -26,7 +26,7 @@
                     </a>
                     
                     <a href="{% url 'courses:delete_course' course.id %}">
-                    <button class="btn btn-default pull-right"><span class="glyphicon glyphicon-remove"></span> </button>
+                    <button class="btn btn-default pull-right"><span class="glyphicon glyphicon-trash"></span> </button>
                     </a>
                 </div>
             </div>
