--- a/courses/templates/courses/exam.html
+++ b/courses/templates/courses/exam.html
@@ -6,14 +6,19 @@
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'courses/style.css' %}" />
     <h1> Exam </h1>
+    {% if user.id == course_owner %}
     <a style="float:right;" href="{% url 'courses:new_question' course_id %}">New Question</a>
+    {% endif %}
     {% if questions_list %}
         <ul>
+        <a style="float:right;" href="{% url 'courses:start_exam' course_id %}">Start Exam</a>
         {% for question in questions_list %}
          <li>
          <h3 style="display: inline;">{{ question.question }}</h3>
+         {% if user.id == course_owner %}
          <a href="{% url 'courses:update_question' course_id question.id %}">update</a>
          <a href="{% url 'courses:delete_question' course_id question.id %}">delete</a>
+         {% endif %}
          <p>{{ question.first_answer }}</p>
          <p>{{ question.second_answer }}</p>
          <p>{{ question.third_answer }}</p>
