--- a/templates/registration/base.html
+++ b/templates/registration/base.html
@@ -66,7 +66,7 @@
 					<p><i class="fa fa-globe" aria-hidden="true"></i> www.extensionengine.com</p>
 				</div>
 				<div class="col-lg-4 col-md-4 ">
-					<p><i class="fa" aria-hidden="true"></i> <img class="img-responsive center-block" src="/static/img/logo2.png"></p>
+					<a href="{% url 'home' %}"><p><i class="fa" aria-hidden="true"></i> <img class="img-responsive center-block" src="/static/img/logo2.png"></p></a>
 				</div>
 				<div class="col-lg-4 col-md-4 padding">
 					<h4>Stay in touch</h4>
