--- a/courses/templates/courses/exam_confirm_delete.html
+++ b/courses/templates/courses/exam_confirm_delete.html
@@ -1,12 +1,19 @@
-{% extends 'registration/base.html' %}
+{% extends 'courses/main.html' %}
 
 {% block title %}Delete question - Learn.com{% endblock %}
 
 {% block content %}
-<h1>Delete Question</h1>
-<form action="" method="post">{% csrf_token %}
-    <p>Are you sure you want to delete "{{ object }}"?</p>
-    <input type="submit" value="Confirm" />
-    <input type="button" value="Cancel" onclick="history.back(-1)" />
-</form>
+{% include 'course_css.html' %}
+<div class="cont_course">
+	<h1>Delete Question</h1><br>
+	<form action="" method="post">{% csrf_token %}
+    	<p>Are you sure you want to delete "{{ object }}"?</p>
+    	<a>
+			<button class="btn btn-lg btn-success" type="submit"><span class="glyphicon glyphicon-ok"></span> Confirm</button>
+		</a>
+    	<a>
+			<button class="btn btn-default btn-lg" type="button" onclick="history.back(-1)"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
+		</a>
+	</form>
+</div>
 {% endblock %}
