--- a/courses/templates/courses/exam_form.html
+++ b/courses/templates/courses/exam_form.html
@@ -1,12 +1,19 @@
-{% extends 'registration/base.html' %}
+{% extends 'courses/main.html' %}
 
-{% block title %}Exam - Learn.com{% endblock %}
+{% block title %}Add a question - Learn.com{% endblock %}
 
 {% block content %}
-<h1>New Question</h1>
-<form action="" method="post">{% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Save" />
-    <input type="button" value="Cancel" onclick="history.back(-1)" />
-</form>
+{% include 'course_css.html' %}
+<div class="cont_course">
+	<h1>Add a New Question</h1><br>
+	<form action="" method="post">{% csrf_token %}
+    	{{ form.as_p }}
+    	<a>
+			<button class="btn btn-lg btn-success" type="submit"><span class="glyphicon glyphicon-ok"></span> Save</button>
+		</a>
+    	<a>
+			<button class="btn btn-default btn-lg" type="button" onclick="history.back(-1)"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
+		</a>
+	</form>
+</div>
 {% endblock %}
